--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,6 +16,7 @@
             <li><%= link_to "Users",    users_path %></li>
             <li><%= link_to "Tweets",    "/tweets" %></li>
             <li><%= link_to "Help",    help_path %></li>
+            <li><%= link_to "About",    about_path %></li>
           </ul>
         </nav>
       </div>
@@ -31,7 +32,7 @@
     </small>
     <nav>
       <ul>
-        <li><%= link_to "Contact", 'http://www.google.com' %></li>
+        <li><%= link_to "Contact", 'http://www.google.it' %></li>
         
       </ul>
     </nav>
